--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/richardassar/base64.git"
+    "url": "https://github.com/richardassar/base64.git"
   },
   "keywords": ["base64", "polyfil", "nodejs", "commonjs", "require", "browserify", "node"]
 }
